--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/runtime-dom": "^3.3.4",
     "axios": "^0.18.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
